# BSAppKey

./: README.md
cpp/: BlKeygen.vcxproj  BlLauncher.vcxproj  BlPacker.vcxproj  BsphpVmp.sln  BsphpVmpCore.vcxproj  CMakeLists.txt  README.md  build.bat  copy_shell_template.bat  prepare_embedded.bat
cpp/core/: base64.cpp  base64.h  hwid.cpp  hwid.h  license.cpp  license.h  rsa_cng.cpp  rsa_cng.h
cpp/keygen/: main.cpp
cpp/launcher/: launcher.rc  main.cpp  resource.h
cpp/launcher/embedded/: README.txt
cpp/packer/: main.cpp
cpp/x64/Debug/: BsphpVmpCore.idb  private.blb  public.blb
cpp/x64/Debug/BlKeygen/: bl_keygen.exe.recipe  bl_keygen.ilk  vc142.idb
cpp/x64/Debug/BlKeygen/BlKeygen.tlog/: BlKeygen.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/x64/Debug/BlLauncher/: bl_launcher.exe.recipe  bl_launcher.ilk  launcher.res  vc142.idb
cpp/x64/Debug/BlLauncher/BlLauncher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
cpp/x64/Debug/BlPacker/: bl_packer.exe.recipe  bl_packer.ilk  vc142.idb
cpp/x64/Debug/BlPacker/BlPacker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/x64/Debug/BsphpVmpCore/BsphpVmpCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
rust/: Cargo.toml  README.md
rust/crates/bl_demo/: Cargo.toml
rust/crates/bl_demo/src/: main.rs
rust/crates/bl_issue/: Cargo.toml
rust/crates/bl_issue/src/: main.rs
rust/crates/bl_license/: Cargo.toml
rust/crates/bl_license/src/: lib.rs
rust/crates/bl_pack/: Cargo.toml
rust/crates/bl_pack/src/: main.rs
编译好注册机/: BsphpVmpCore.lib  private.blb  public.blb  注册机使用说明.md
