[package]
name = "bl_issue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bl_issue"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bl_license = { path = "../bl_license" }
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
