[package]
name = "bl_license"
version = "0.1.0"
edition = "2021"
description = "Offline Ed25519 license verify + optional machine binding (Windows)"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
